# Linear_Analytica

./: ANALYTICA.md  COMPLETE_LISTING.md  ENGINE.md  README.md  commit.txt  pyproject.toml
data/: linear_a_latff_sample.txt  linear_a_sign_inventory.json
linear_analytica/: __init__.py  cli.py  navigator.py
programs/: __init__.py  animated_cfg_corpus.py  bootstrap_explorer.py  callgraph.py  compiler.py  ig_bridge.py  plot_cfg_document.py  primitives.py  run_all.py  runtime.py  sectional.py  tablet_comparator.py
